cmake_minimum_required(VERSION 3.12)
project(avengine)

include_directories(${CMAKE_SOURCE_DIR}/third_party/)
include_directories(${CMAKE_SOURCE_DIR}/third_party/include)
include_directories(${CMAKE_SOURCE_DIR}/third_party/NvCodec)
include_directories(${CMAKE_SOURCE_DIR}/include/)
include_directories(/usr/local/cuda/include/)

message(STATUS "platform: ${CMAKE_SYSTEM}")
message(STATUS "system name: ${CMAKE_HOST_SYSTEM_NAME}")
message(STATUS "compiler: ${CMAKE_CXX_COMPILER_ID}")

if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
		add_compile_options(-g -std=c++20)
	ENDIF()
	add_definitions(-DLINUX)
elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
		add_compile_options(/std:c++20 /MTd)
	endif()
	add_definitions(-DWIN32)
	set(LIB_DIR ${PROJECT_SOURCE_DIR}/lib/Debug)
	message("avengine lib dir:${LIB_DIR}")
	set(NVCODEC_LIB_DIR  ${PROJECT_SOURCE_DIR}/third_party/NvCodec/Lib/x64)
	message("nvcodec lib dir:${NVCODEC_LIB_DIR}")

	if(DEFINED FFMPEG_DIR)
    	Set(FFMPEG_LIB_DIR ${FFMPEG_DIR}/lib/)
		Set(FFMPEG_INC_DIR ${FFMPEG_DIR}/include/)
	else()
		message(FATAL_ERROR "FFMPEG_DIR not set")
	endif()

	if(DEFINED CUDA_DIR)
		Set(CUDA_LIB_DIR ${CUDA_DIR}/lib/x64)
		Set(CUDA_INC_DIR ${CUDA_DIR}/include/)
	else()
		message(FATAL_ERROR "CUDA_DIR not set")
	endif()

	include_directories(${FFMPEG_INC_DIR})
	include_directories(${CUDA_INC_DIR})	
	
elseif(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
	add_definitions(-DMACOS)
else()
	MESSAGE(FATAL_ERROR "other platform: ${CMAKE_SYSTEM} not surpport")
endif()

include_directories( ${PROJECT_SOURCE_DIR}/third_party/NvCodec/Interface)
include_directories( ${PROJECT_SOURCE_DIR}/third_party/NvCodec/NvUtils)

add_subdirectory(src)
add_subdirectory(third_party)
add_subdirectory(examples)
